<resources>
    <string name="app_name">BajaTodo</string>
    <string name="hint_url">Pega el link de YouTube</string>
    <string name="option_video">Video MP4</string>
    <string name="option_audio">Audio M4A</string>
    <string name="btn_download">DESCARGAR</string>
    <string name="title_baja_todo">Baja todo</string>
    <string name="hint_fav_video">Pega el link de tu video favorito</string>
    <string name="desc_bg">Imagen de fondo</string>
    <string name="supported_platforms">Videos de YouTube, Instagram, X y Más.</string>
    <string name="title_login">INICIAR SESIÓN</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">ENTRAR</string>
    <string name="register_link">¿No tienes cuenta? Regístrate aquí</string>
    <string name="btn_register">REGISTRARSE</string>
    <string name="title_register">REGISTRO</string>
    <string name="login_link">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="btn_history">Historial</string>
    <string name="title_history">Mis Descargas</string>
    <string name="status_downloading">DESCARGANDO&#8230;</string>
</resources>